update static site to work, remove actual api endpoint

--- a/la_labs/student_materials/s3_static_website/main.css
+++ b/la_labs/student_materials/s3_static_website/main.css
@@ -8,6 +8,18 @@ hr {
   border-top: solid black;
 }
 
+div #error-message {
+  color: red;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+div #success-message, #results-message {
+  color: green;
+  font-size: 15px;
+  font-weight: bold;
+}
+
 .form-signin {
   max-width: 530px;
   padding: 15px;
